test/langtools/tools/javac/ClassCycle/ClassCycle4.out
ClassCycle4.java:8:1: compiler.err.cyclic.inheritance: ClassCycle4
1 error
